--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -23,56 +23,34 @@
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
             padding: 2rem; /* Increased padding */
             width: 100%;
-            max-width: 600px; /* Adjust max-width to match screenshot feel */
+            max-width: 800px; /* Increased max-width for new sections */
             text-align: center; /* Center align content */
         }
-        /* Style for the drill items */
-        .drill-item {
-            display: flex; /* Use flexbox for layout */
-            justify-content: space-between; /* Space out content */
-            align-items: center; /* Vertically align items */
-            background-color: #e2f0ff; /* Light blue background for items */
+        /* Style for the drill links */
+        .drill-link {
+            display: block; /* Make links block for better click area */
+            background-color: #e2f0ff; /* Light blue background for links */
             color: #0056b3; /* Darker blue text color */
-            padding: 1rem; /* Padding inside items */
-            margin-bottom: 0.75rem; /* Space between items */
-            border-radius: 0.5rem; /* Rounded corners for items */
-            text-decoration: none; /* Remove underline for the link part */
+            padding: 1rem; /* Padding inside links */
+            margin-bottom: 0.75rem; /* Space between links */
+            border-radius: 0.5rem; /* Rounded corners for links */
+            text-decoration: none; /* Remove underline */
             font-size: 1.1rem; /* Slightly larger font size */
             font-weight: 600; /* Semi-bold font */
             transition: background-color 0.2s ease, transform 0.1s ease; /* Smooth hover effect */
             border: 1px solid #b3d4ff; /* Subtle border */
         }
-        .drill-item a {
-            color: #0056b3; /* Ensure link text color is correct */
-            text-decoration: none; /* Remove underline from link */
-            flex-grow: 1; /* Allow link to take available space */
-            text-align: left; /* Align link text to the left */
-            padding-right: 1rem; /* Add some space between link and status */
-        }
-         .drill-item:hover {
+        .drill-link:hover {
             background-color: #cce0ff; /* Lighter blue on hover */
             transform: translateY(-2px); /* Slight lift effect */
         }
-         .drill-item:active {
+         .drill-link:active {
             transform: translateY(0); /* Press down effect */
         }
-        .drill-status {
-            font-size: 0.9rem; /* Smaller font for status */
-            font-weight: 400; /* Normal weight for status */
-            color: #4a5568; /* Gray text for status */
-            text-align: right; /* Align status text to the right */
-        }
-
         /* Add a logo or image */
         .logo {
             max-width: 150px; /* Adjust size as needed */
             margin: 0 auto 1.5rem auto; /* Center and add space below */
-        }
-
-        /* Hide the old performance and reflection sections */
-        #overall-performance-section,
-        #personal-reflections-section {
-            display: none;
         }
     </style>
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,7 +60,7 @@
 <body>
 
     <div class="dashboard-container">
-         <img src="https://placehold.co/150x50/cccccc/ffffff?text=Your+Logo" alt="Logo Placeholder" class="logo" onerror="this.style.display='none'; this.onerror=null;">
+         <img src="https://ik.imagekit.io/mwp/MWP%20Color%20no%20background.png?updatedAt=1745982959141" alt="MedwithPurpose Logo" class="logo" onerror="this.style.display='none'; this.onerror=null;">
 
         <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Quantitative Reasoning Drills</h1>
 
@@ -91,144 +69,22 @@
             <input type="text" id="student-name" name="student-name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-base" placeholder="Enter your name">
         </div>
 
-        <div id="drill-list-container" class="space-y-3">
-            </div>
 
-        <div id="overall-performance-section" class="dashboard-section">
-            <h2>Overall Performance</h2>
-            <div id="performance-list">
-                </div>
+        <div class="space-y-3">
+            <a href="qr%20index%201.html" class="drill-link">Timed QR Drill 1</a>
+
+            <a href="qr%20index%202.html" class="drill-link">Timed QR Drill 2</a>
+
+            <a href="qr%20index%203.html" class="drill-link">Timed QR Drill 3</a>
+
+            <a href="qr%20index%204.html" class="drill-link">Timed QR Drill 4</a>
+
+            <a href="qr%20index%205.html" class="drill-link">Timed QR Drill 5</a>
+
+            <a href="qr%20index%206.html" class="drill-link">Timed QR Drill 6</a>
         </div>
 
-        <div id="personal-reflections-section" class="dashboard-section">
-             <h2>Personal Reflections</h2>
-             <div id="reflections-list">
-                 </div>
-         </div>
-
     </div>
-
-    <script>
-        // List of QR drill files
-        const qrDrillFiles = [
-            'qr index 1.html',
-            'qr index 2.html',
-            'qr index 3.html',
-            'qr index 4.html',
-            'qr index 5.html',
-            'qr index 6.html',
-        ];
-
-        const drillListContainer = document.getElementById('drill-list-container');
-        const studentNameInput = document.getElementById('student-name');
-
-        // Function to format time string "X min Y sec" into total seconds
-        function parseTime(timeString) {
-            const parts = timeString.match(/(\d+)\s*min\s*(\d+)\s*sec/);
-            if (parts && parts.length === 3) {
-                const minutes = parseInt(parts[1], 10);
-                const seconds = parseInt(parts[2], 10);
-                return minutes * 60 + seconds;
-            }
-            return 0; // Return 0 if format doesn't match
-        }
-
-        // Function to fetch and parse results from a drill file
-        async function fetchDrillResults(fileName) {
-            try {
-                const response = await fetch(fileName);
-                if (!response.ok) {
-                    console.warn(`Could not fetch ${fileName}: ${response.statusText}`);
-                    return null; // File not found or other error
-                }
-                const htmlText = await response.text();
-
-                // Parse the HTML content
-                const parser = new DOMParser();
-                const doc = parser.parseFromString(htmlText, 'text/html');
-
-                // Find the results elements - adjust selectors if needed based on your drill file structure
-                const scoreEl = doc.getElementById('score');
-                const totalQuestionsEl = doc.getElementById('total-questions-results');
-                const timeTakenEl = doc.getElementById('time-taken');
-
-                if (scoreEl && totalQuestionsEl && timeTakenEl) {
-                    const score = parseInt(scoreEl.textContent, 10);
-                    const totalQuestions = parseInt(totalQuestionsEl.textContent, 10);
-                    const timeTakenString = timeTakenEl.textContent;
-                    const timeTakenSeconds = parseTime(timeTakenString);
-
-                    if (!isNaN(score) && !isNaN(totalQuestions) && totalQuestions > 0) {
-                        const accuracy = (score / totalQuestions) * 100;
-                        const speed = timeTakenSeconds > 0 ? (timeTakenSeconds / totalQuestions) : 0; // seconds per question
-
-                        return {
-                            completed: true,
-                            score: score,
-                            totalQuestions: totalQuestions,
-                            accuracy: accuracy.toFixed(1), // 1 decimal place
-                            speed: speed.toFixed(1) // 1 decimal place
-                        };
-                    }
-                }
-                // If elements not found or parsing fails
-                return null;
-
-            } catch (error) {
-                console.error(`Error fetching or parsing ${fileName}:`, error);
-                return null; // Error during fetch or parsing
-            }
-        }
-
-        // Function to render the drill list
-        async function renderDrillList() {
-            drillListContainer.innerHTML = ''; // Clear current list
-
-            for (const [index, fileName] of qrDrillFiles.entries()) {
-                const drillNumber = index + 1;
-                const drillName = `Timed QR Drill ${drillNumber}`;
-                const drillLink = fileName; // The actual file name is the link target
-
-                const drillItem = document.createElement('div');
-                drillItem.classList.add('drill-item');
-
-                const linkElement = document.createElement('a');
-                linkElement.href = drillLink;
-                linkElement.textContent = drillName;
-                linkElement.target = "_blank"; // Open in new tab
-
-                const statusElement = document.createElement('span');
-                statusElement.classList.add('drill-status');
-
-                // Attempt to fetch results
-                const results = await fetchDrillResults(fileName);
-
-                if (results && results.completed) {
-                    statusElement.innerHTML = `Completed: Score ${results.score}/${results.totalQuestions}<br>Accuracy: ${results.accuracy}%<br>Speed: ${results.speed} s/q`;
-                } else {
-                    statusElement.textContent = 'Incompleted';
-                }
-
-                drillItem.appendChild(linkElement);
-                drillItem.appendChild(statusElement);
-                drillListContainer.appendChild(drillItem);
-            }
-        }
-
-        // Load the drill list when the page loads
-        document.addEventListener('DOMContentLoaded', renderDrillList);
-
-        // Optional: Save and load student name from local storage
-        const savedStudentName = localStorage.getItem('studentName');
-        if (savedStudentName) {
-            studentNameInput.value = savedStudentName;
-        }
-
-        studentNameInput.addEventListener('input', () => {
-            localStorage.setItem('studentName', studentNameInput.value);
-        });
-
-    </script>
 
 </body>
 </html>
