--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -64,11 +64,9 @@
 
         <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Quantitative Reasoning Drills</h1>
 
-        <div class="mb-6 text-left">
-            <label for="student-name" class="block text-lg font-semibold text-gray-700 mb-2">Student Name:</label>
-            <input type="text" id="student-name" name="student-name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-base" placeholder="Enter your name">
+        <div class="mb-6 text-left text-lg font-semibold text-gray-700">
+            Welcome <span id="student-name-editable" contenteditable="true" class="font-normal text-gray-900 px-2 py-1 border border-dashed border-transparent hover:border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded focus:outline-none transition-colors duration-150">Your Name</span>!
         </div>
-
 
         <div class="space-y-3">
             <a href="qr%20index%201.html" class="drill-link">Timed QR Drill 1</a>
