--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -64,7 +64,7 @@
 
         <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Quantitative Reasoning Drills</h1>
 
-        <div class="mb-6 text-left text-lg font-semibold text-gray-700">Welcome <span id="student-name-editable" contenteditable="true" class="font-normal text-gray-900 px-2 py-1 border border-dashed border-transparent hover:border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded focus:outline-none transition-colors duration-150">Your Name</span></div>
+        <div class="mb-6 text-left text-lg font-semibold text-gray-700">Welcome <span id="student-name-editable" contenteditable="true" class="font-normal text-gray-900 px-2 py-1 border border-dashed border-transparent hover:border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded focus:outline-none transition-colors duration-150">Your Name</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline-block ml-1 text-gray-500 align-middle"><path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" /></svg></div>
 
         <div class="space-y-3">
             <a href="qr%20index%201.html" class="drill-link">Timed QR Drill 1</a>
