--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -64,7 +64,7 @@
 
         <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Quantitative Reasoning Drills</h1>
 
-        <div class="mb-6 text-left text-lg font-semibold text-gray-700">Welcome <span id="student-name-editable" contenteditable="true" class="font-normal text-gray-900 px-2 py-1 border border-dashed border-transparent hover:border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded focus:outline-none transition-colors duration-150">Your Name</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline-block ml-1 text-gray-500 align-middle"><path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" /></svg></div>
+        <div class="mb-6 text-left text-lg font-semibold text-gray-700">Welcome <span id="student-name-editable" contenteditable="true" class="font-normal text-gray-900 px-2 py-1 border border-dashed border-transparent hover:border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded focus:outline-none transition-colors duration-150">Your Name</span><svg id="edit-name-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline-block ml-1 text-gray-500 align-middle"><path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" /></svg></div>
 
         <div class="space-y-3">
             <a href="qr%20index%201.html" class="drill-link">Timed QR Drill 1</a>
@@ -84,27 +84,46 @@
 
     <script>
         const nameSpan = document.getElementById('student-name-editable');
+        const editIcon = document.getElementById('edit-name-icon'); // Get the icon
         const localStorageKey = 'qrStudentName';
+        const defaultName = 'Your Name';
+        const smallIconClasses = ['w-3', 'h-3'];
+        const normalIconClasses = ['w-4', 'h-4'];
+
+        function setIconSize(isSmall) {
+            if (isSmall) {
+                editIcon.classList.remove(...normalIconClasses);
+                editIcon.classList.add(...smallIconClasses);
+            } else {
+                editIcon.classList.remove(...smallIconClasses);
+                editIcon.classList.add(...normalIconClasses);
+            }
+        }
 
         // Load name from local storage on page load
         document.addEventListener('DOMContentLoaded', () => {
             const savedName = localStorage.getItem(localStorageKey);
-            if (savedName && savedName.trim() !== '') {
+            if (savedName && savedName.trim() !== '' && savedName.trim() !== defaultName) {
                 nameSpan.textContent = savedName;
+                setIconSize(true); // Make icon small if name is not default
             } else {
-                nameSpan.textContent = 'Your Name'; // Default if nothing saved or empty
+                nameSpan.textContent = defaultName; // Default if nothing saved or empty or exactly 'Your Name'
+                setIconSize(false); // Ensure icon is normal size
+                if (savedName === defaultName) localStorage.removeItem(localStorageKey); // Clear storage if it holds the default
             }
         });
 
         // Save name to local storage when the span loses focus
         nameSpan.addEventListener('blur', () => {
             const currentName = nameSpan.textContent.trim();
-            if (currentName !== '') {
+            if (currentName !== '' && currentName !== defaultName) {
                 localStorage.setItem(localStorageKey, currentName);
+                setIconSize(true); // Make icon small
             } else {
-                // Optionally handle case where user clears the name
-                localStorage.removeItem(localStorageKey); // Or set back to default
-                nameSpan.textContent = 'Your Name'; 
+                // Handle case where user clears the name or enters the default
+                localStorage.removeItem(localStorageKey);
+                nameSpan.textContent = defaultName;
+                setIconSize(false); // Make icon normal size
             }
         });
 
