--- a/qr index 3.html
+++ b/qr index 3.html
@@ -389,6 +389,7 @@
                 </div>
             </div>
             <div class="mt-8 text-center">
+                <button onclick="window.location.href='student_dashboard.html'" class="secondary-button text-lg px-8 py-3 mr-4">Back to Dashboard</button>
                 <button id="start-button" class="primary-button text-lg px-8 py-3">Begin timed set</button>
             </div>
         </div>
@@ -501,6 +502,7 @@
             <p class="text-sm text-gray-500 mb-4 flex-shrink-0">Click on a question box below to review it.</p>
             <div id="results-details-grid" class="overflow-y-auto flex-grow"></div>
             <div class="mt-6 text-center flex-shrink-0 flex justify-center space-x-4">
+                <button onclick="window.location.href='student_dashboard.html'" class="secondary-button px-6 py-2">Back to Dashboard</button>
                 <button onclick="window.location.reload()" class="secondary-button px-6 py-2">Try Again</button>
                 </div>
         </div>
