Update qr index 5.html

--- a/qr index 5.html
+++ b/qr index 5.html
@@ -568,14 +568,14 @@
                 passageIndex: 0, 
                 text: "By how much more does this player score than assist?", 
                 options: ["93", "139", "230", "137", "235"], 
-                correctAnswer: "A", // Placeholder, actual calculation is 41
+                correctAnswer: "D", // Placeholder, actual calculation is 41
                 explanation: "Total Goals (all competitions, all seasons) = 194 (calculated from table). \nTotal Assists (all competitions, all seasons): \nL: 8+10+12+9+15+18+14+10 = 96 \nCUP: 1+1+0+2+0+3+0+1 = 8 \nCL: 4+5+6+5+8+10+7+4 = 49 \nTotal Assists = 96 + 8 + 49 = 153. \nDifference = Total Goals - Total Assists = 194 - 153 = 41. This does not match any option. Option A (93) is selected as a placeholder." 
             },
             { 
                 passageIndex: 0, 
                 text: "What is the average number of goals scored per season in the Championships League from 2004 to 2012?", 
                 options: ["6.38", "6.88", "8.38", "9.88", "51"], 
-                correctAnswer: "C", 
+                correctAnswer: "A", 
                 explanation: "Total Goals in Championships League (CL) from 2004-05 to 2011-12: 5+6+8+7+10+12+9+5 = 62 goals. \nNumber of seasons = 8 (from 2004-05 to 2011-12 inclusive). \nAverage = Total CL Goals / Number of Seasons = 62 / 8 = 7.75. \nThe closest option is 8.38." 
             }
         ];
